# bovidtrk

./: CMakeLists.txt  readme.txt
src/: gconsole.c  goattrk2.c  makefile.common
